# ChangeLog for x11-misc/shared-mime-info
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.77 2007/02/04 08:47:35 corsair Exp $

  04 Feb 2007; Markus Rothe <corsair@gentoo.org>
  shared-mime-info-0.19.ebuild:
  Stable on ppc64; bug #164978

  03 Feb 2007; Andrej Kacian <ticho@gentoo.org>
  shared-mime-info-0.19.ebuild:
  Stable on x86, bug #164978.

  03 Feb 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  shared-mime-info-0.19.ebuild:
  Stable on ppc wrt bug #164978.

  03 Feb 2007; Olivier Crête <tester@gentoo.org>
  shared-mime-info-0.19.ebuild:
  Stable on amd64 per bug #164978

  01 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  shared-mime-info-0.19.ebuild:
  Stable on sparc

  21 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  shared-mime-info-0.19.ebuild:
  Stable on IA64, bug 156662.

  20 Jan 2007; Jeroen Roovers <jer@gentoo.org> shared-mime-info-0.19.ebuild:
  Stable for HPPA (bug #156662).

  17 Jan 2007; Olivier Crête <tester@gentoo.org>
  shared-mime-info-0.18-r1.ebuild:
  Stable on amd64, bug #156662

  14 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  shared-mime-info-0.19.ebuild:
  Stable on Alpha.

  21 Dec 2006; Markus Rothe <corsair@gentoo.org>
  shared-mime-info-0.18-r1.ebuild:
  Stable on ppc64; bug #156662

  18 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  shared-mime-info-0.18-r1.ebuild:
  Stable on sparc

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  shared-mime-info-0.18-r1.ebuild:
  Stable on ppc wrt bug #156662.

  10 Dec 2006; Andrej Kacian <ticho@gentoo.org>
  shared-mime-info-0.18-r1.ebuild:
  Stable on x86, bug #156662.

*shared-mime-info-0.19 (04 Dec 2006)

  04 Dec 2006; Marinus Schraal <foser@gentoo.org> shared-mime-info-0.19.ebuild :
  New release per #150428

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org>
  shared-mime-info-0.17-r2.ebuild:
  Mark 0.17-r2 stable on alpha
