@@ -1,0 +1,3 @@
+MD5 62184241d497d34138285bc248b3fabc shared-mime-info-0.20.tar.bz2 429405
+RMD160 74fb58dcf9a6b7a651a0708a81b5f37b9e5eb617 shared-mime-info-0.20.tar.bz2 429405
+SHA256 6febe616fb850f4319efa7017312abb796024e7ac20da37c4d2ce34afa41776c shared-mime-info-0.20.tar.bz2 429405
